--- a/index.html
+++ b/index.html
@@ -538,8 +538,8 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="container footer-conteiner">
-            <div class="footer-conteiner-logo">
+        <div class="container">
+            <div class="container footer-conteiner-logo">
                 <a class="footer-logo" href="./index.html">Web<span class="footer-logo-studio">Studio</span></a>
                 <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth
                     solutions. </p>
