--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                     </svg>
                 </button>
         </div>
-        <div class="mobile-menu is-open" data-menu>
-            <div class="container mobile-menu-container">
+        <div class="mobile-menu" data-menu>
+            <div class="mobile-menu-container">
                 <button class="mobile-menu-close" type="button" data-menu-close>
                     <svg class="button-close-svg" width="8" height="8">
                         <use href="./images/icons.svg#icon-close"></use>
@@ -538,8 +538,8 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="container">
-            <div class="container footer-conteiner-logo">
+        <div class="footer-container">
+            <div class="footer-conteiner-logo">
                 <a class="footer-logo" href="./index.html">Web<span class="footer-logo-studio">Studio</span></a>
                 <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth
                     solutions. </p>
@@ -592,7 +592,7 @@
         </div>
     </div>
     </footer>
-    <div class="backdrope hidden" data-modal>
+    <div class="backdrope" data-modal>
         <div class="modal">
             <button class="button-close" type="button" data-modal-close>
                 <svg class="button-close-svg" width="8" height="8">
@@ -643,9 +643,12 @@
                         <svg class="chec-svg" width="10" height="8">
                             <use href="./images/icons.svg#icon-vector"></use>
                         </svg>
-                    </span> I accept the terms and conditions of the
+                    </span> 
+                    <span>I accept the terms and conditions of the
                     <a class="checkbox-link"
-                            href="">Privacy Policy</a></label>
+                            href="">Privacy Policy</a>
+                        </span>
+                    </label>
                     
                 </div>
                 <button class="form-button" type="submit">Send</button>
