--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
                 <address class="mobile-address">
                     <ul class="mobile-address-list">
                         <li class="mobile-address-list-item">
-                            <a class="mobile-address-list-item-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                            <a class="mobile-address-list-item-link current" href="tel:+110001111111">+11 (000) 111-11-11</a>
                         </li>
                         <li class="mobile-address-list-item">
-                            <a class="mobile-address-list-item-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                            <a class="mobile-address-list-item-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                         </li>
                         </ul>  
                 </address>
